[package]
name = "zookeeper"
version = "0.2.0"
authors = ["Nandor Kracser <bonifaido@gmail.com>"]
license = "MIT"
homepage = "https://github.com/bonifaido/rust-zookeeper"
repository = "https://github.com/bonifaido/rust-zookeeper"
documentation = "http://bonifaido.github.io/rust-zookeeper"
description = "A minimal ZooKeeper client"
readme = "README.md"
keywords = ["zk", "zookeeper", "distributed", "coordination"]

[dependencies]
byteorder = "0.4"
bytes = "0.3"
enum_primitive = "0.1"
lazy_static = "0.1"
log = "0.3"
mio = "0.5"
num = "0.1"
time = "0.1"
snowflake = "1.0.0"
schedule_recv = "0.0.1"
rand = "0.3"
uuid = "0.1.18"
regex = "0.1.41"

[dev-dependencies]
env_logger = "0.3"

[features]
unstable = []

[[test]]
name = "test"
path = "tests/test.rs"